--- a/Aula 2/inicial.ipynb
+++ b/Aula 2/inicial.ipynb
@@ -17,22 +17,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idade</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>tempo_como_cliente</th>\n",
+       "      <th>frequencia_uso</th>\n",
+       "      <th>ligacoes_callcenter</th>\n",
+       "      <th>dias_atraso</th>\n",
+       "      <th>assinatura</th>\n",
+       "      <th>duracao_contrato</th>\n",
+       "      <th>total_gasto</th>\n",
+       "      <th>meses_ultima_interacao</th>\n",
+       "      <th>cancelou</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>932.00</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>557.00</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Quarterly</td>\n",
+       "      <td>185.00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>58.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>396.00</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>617.00</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>881661</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>716.38</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>881662</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>Annual</td>\n",
+       "      <td>745.38</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>881663</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Quarterly</td>\n",
+       "      <td>977.31</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>881664</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Quarterly</td>\n",
+       "      <td>602.55</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>881665</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>Quarterly</td>\n",
+       "      <td>567.77</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>881666 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        idade    sexo  tempo_como_cliente  frequencia_uso  \\\n",
+       "0        30.0  Female                39.0            14.0   \n",
+       "1        65.0  Female                49.0             1.0   \n",
+       "2        55.0  Female                14.0             4.0   \n",
+       "3        58.0    Male                38.0            21.0   \n",
+       "4        23.0    Male                32.0            20.0   \n",
+       "...       ...     ...                 ...             ...   \n",
+       "881661   42.0    Male                54.0            15.0   \n",
+       "881662   25.0  Female                 8.0            13.0   \n",
+       "881663   26.0    Male                35.0            27.0   \n",
+       "881664   28.0    Male                55.0            14.0   \n",
+       "881665   31.0    Male                48.0            20.0   \n",
+       "\n",
+       "        ligacoes_callcenter  dias_atraso assinatura duracao_contrato  \\\n",
+       "0                       5.0         18.0   Standard           Annual   \n",
+       "1                      10.0          8.0      Basic          Monthly   \n",
+       "2                       6.0         18.0      Basic        Quarterly   \n",
+       "3                       7.0          7.0   Standard          Monthly   \n",
+       "4                       5.0          8.0      Basic          Monthly   \n",
+       "...                     ...          ...        ...              ...   \n",
+       "881661                  1.0          3.0    Premium           Annual   \n",
+       "881662                  1.0         20.0    Premium           Annual   \n",
+       "881663                  1.0          5.0   Standard        Quarterly   \n",
+       "881664                  2.0          0.0   Standard        Quarterly   \n",
+       "881665                  1.0         14.0    Premium        Quarterly   \n",
+       "\n",
+       "        total_gasto  meses_ultima_interacao  cancelou  \n",
+       "0            932.00                    17.0       1.0  \n",
+       "1            557.00                     6.0       1.0  \n",
+       "2            185.00                     3.0       1.0  \n",
+       "3            396.00                    29.0       1.0  \n",
+       "4            617.00                    20.0       1.0  \n",
+       "...             ...                     ...       ...  \n",
+       "881661       716.38                     8.0       0.0  \n",
+       "881662       745.38                     2.0       0.0  \n",
+       "881663       977.31                     9.0       0.0  \n",
+       "881664       602.55                     2.0       0.0  \n",
+       "881665       567.77                    21.0       0.0  \n",
+       "\n",
+       "[881666 rows x 11 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Passo a passo do Projeto (BD = Base de Dados)\n",
-    "# 1. Importar BD\n",
-    "import pandas as pd\n",
+    "# Passo a passo\n",
+    "# Passo 1: Importar base de dados\n",
+    "# Passo 2: Visualizar base de dados\n",
+    "# Passo 3: Corrigir cagadas da base de dados\n",
+    "# Passo 4: Análise dos cancelamentos\n",
+    "# Passo 5: Análise da causa dos cancelamentos (como as colunas impactam no cancelamento?)\n",
     "\n",
-    "tabela = pd.read_csv(\"cancelamento.csv\")\n",
+    "# !pip install pandas numpy openpyxl nbformat ipykernel plotly\n",
+    "# Passo a passo do projeto\n",
+    "# Passo 1: Importar a base de dados\n",
+    "import pandas as pd  # type: ignore\n",
     "\n",
-    "# 2. Visualizar BD\n",
-    "    # 2.1 Entender quais infos. disponíveis\n",
-    "    # 2.2 Identificar quais os problemas na BD\n",
-    "# 3. Tratar de Dados -> Corrigir os erros na BD\n",
-    "# 4. Analisar o cancelamento dos clientes\n",
-    "# 5. Analisar a causa dos cancelamentos (como as inf. dos cliente impactam no cancelamento)\n"
+    "tabela = pd.read_csv(\"cancelamentos.csv\")\n",
+    "\n",
+    "# Passo 2: Visualizar a base de dados\n",
+    "tabela = tabela.drop(columns=\"CustomerID\")\n",
+    "display(tabela)\n",
+    "# colunas inúteis - informações que não te ajudam, te atrapalham"
    ]
   }
  ],
